-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.7.1
-
None
-
Manjaro KDE
-
-
d810c5b77ffc0b09f3ded01cd2758dd13211b33c (qt-creator/qt-creator/4.7)
On start screen hotkey Ctrl + Shift + (number) (Where number larger than recent projects count) crashes Qt Creator.
| For Gerrit Dashboard: QTCREATORBUG-21302 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 243127,3 | Fix crash when pressing wrong shortcuts in welcome mode | 4.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |