Fix crash when pressing wrong shortcuts in welcome mode

Fixes: QTCREATORBUG-21302
Change-Id: Ib7e50f3cbd3e6e8f995b8cda7ad965f0cafde511
Reviewed-by: Orgad Shaneh <orgads@gmail.com>